# fastapi-template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: lint_and_test.yml
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/: router.py  sample.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/app/: __init__.py  auth.py  cache.py  health.py  root.py  sentry.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/api/schema/: __init__.py  auth0_user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/config/: constants.py  env.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: common.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/repository/: boto3.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/repository/postgres/: client.py  exception.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/repository/postgres/model/: base.py  user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/repository/postgres/service/: user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/repository/redis/: client.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/repository/s3/: common.py
